# rules_codechecker

./: .gitignore  .pylintrc  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  pytest.ini  requirements.txt  run_tests.sh
.ci/docker/: README.md  entrypoint.sh
.ci/docker/rhel9/: Dockerfile  entrypoint.sh
.ci/docker/ubuntu/: Dockerfile  entrypoint.sh
.ci/micromamba/: README.md  ci.yaml  dev.yaml  init.sh  run_tests.sh
.github/: bazel_version.json
.github/platform_environment_setup/rhel9/: action.yaml
.github/platform_environment_setup/ubuntu/: action.yaml
.github/workflows/: docker-ci.yaml  foss.yaml  lint.yaml  micromamba.yaml  test.yaml  unit_test.yaml
dependency/: bash-lint.sh
src/: BUILD  clang.bzl  codechecker.bzl  codechecker_script.py  codechecker_store.bzl  codechecker_toolchain.bzl  common.bzl  compile_commands.bzl  metadata_merge.py  per_file.bzl  per_file_script.py  tools.bzl
test/: README.md  pylint_runner.py  test.sh  test_runner.sh
test/common/: BUILD  base.py  codechecker_server.py  grep_check.py  unit_test.bzl
test/foss/: BUILD  README.md  foss_test.bzl  foss_test_runner.py  test_foss.py  yaml-cpp.yaml  zlib.yaml
test/foss/templates/: MODULE.template  WORKSPACE.template
test/foss/yaml-cpp/: init.sh  yaml-cpp-070.patch
test/foss/zlib/: init.sh
test/foss/zlib-module/: init.sh
test/unit/: grep_check.py  unit_test.bzl
test/unit/argument_merge/: BUILD
test/unit/basic/: BUILD
test/unit/caching/: BUILD
test/unit/compile_flags/: BUILD
test/unit/config/: BUILD
test/unit/external_repository/: MODULE.bazel  test_external_repo.py
test/unit/generated_files/: BUILD
test/unit/implementation_deps/: BUILD
test/unit/legacy/: BUILD  test_legacy.py
test/unit/metadata/: BUILD  main.cc  other.cc  test_metadata.py
test/unit/parse/: BUILD  test_parse.py
test/unit/skip/: BUILD  test_skip.py
test/unit/template/: BUILD  template.cpp  test_python_template.py  test_template.py
test/unit/virtual_include/: BUILD  test_virtual_include.py
