"""
Copyright 2023 Ericsson AB

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

module(name = "rules_codechecker")

bazel_dep(name = "rules_python", version = "0.32.0")
bazel_dep(name = "rules_cc", version = "0.2.3")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
single_version_override(
    module_name = "buildifier_prebuilt",
    patch_strip = 1,
    patches = [
        "//.ci/buildifier:prune.patch",
        "//.ci/buildifier:template.patch",
    ],
)

bazel_dep(name = "aspect_rules_lint", version = "1.11.0", dev_dependency = True)

codechecker_extension = use_extension(
    "//src:tools.bzl",
    "module_register_default_codechecker",
)
use_repo(codechecker_extension, "default_codechecker_tools")


bazel_dep(name = "toolchains_llvm", version = "1.7.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.4",
    extra_llvm_distributions = {
        "LLVM-20.1.4-Linux-ARM64.tar.xz": "4de80a332eecb06bf55097fd3280e1c69ed80f222e5bdd556221a6ceee02721a",
        "LLVM-20.1.4-Linux-X64.tar.xz": "113b54c397adb2039fa45e38dc8107b9ec5a0baead3a3bac8ccfbb65b2340caa",
        "LLVM-20.1.4-macOS-ARM64.tar.xz": "debb43b7b364c5cf864260d84ba1b201d49b6460fe84b76eaa65688dfadf19d2",
        "clang+llvm-20.1.4-x86_64-pc-windows-msvc.tar.xz": "2b12ac1a0689e29a38a7c98c409cbfa83f390aea30c60b7a06e4ed73f82d2457",
    },
)

use_repo(llvm, "llvm_toolchain_llvm")
